--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wild-header">Online   Zoo</div>
+    <div class="wild-header">Online&nbsp;&nbsp;&nbsp;Zoo</div>
     <div class="wild" id="wild">
 
     </div>
